# rosnect2

./: CMakeLists.txt  package.xml
launch/: kinect2.launch  kinect2_bridge.launch  kinect2_bridge_ir.launch  kinect2_bridge_ir_omp.launch
libusb/lib/: libusb-1.0.la  libusb-1.0.so.0.1.0  libusb-1.0.so.0.1.0_old
libusb/lib/pkgconfig/: libusb-1.0.pc
src/: kinect2_bridge.cpp.autosave  rosnect2.cpp
